[gd_scene load_steps=4 format=3 uid="uid://dq1flq3bg448u"]

[ext_resource type="Texture2D" uid="uid://ddglv8wb46wjs" path="res://assets/Settlement.png" id="1_q0i06"]
[ext_resource type="Script" path="res://src/board/building.gd" id="1_s4jl6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2rkpb"]

[node name="Building" type="Node2D"]
script = ExtResource("1_s4jl6")

[node name="BuildingSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("1_q0i06")

[node name="BuildingArea2D" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="BuildingCollisionShape2D" type="CollisionShape2D" parent="BuildingArea2D"]
shape = SubResource("CircleShape2D_2rkpb")

[connection signal="mouse_entered" from="BuildingArea2D" to="." method="_on_building_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BuildingArea2D" to="." method="_on_building_area_2d_mouse_exited"]
